# psy-slots

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: bot.py  config.py  handler.py  migrations.py  notify.py  ydb_client.py
app/bot/: __init__.py  formatting.py  keyboards.py  naming.py
app/bot/handlers/: admin.py  client.py
app/domain/: availability.py  booking.py  client.py  slots.py  specialist.py
app/services/: availability_service.py  booking_service.py  client_service.py  reminder_service.py  slot_service.py  specialist_service.py
openspec/changes/add-admin-flow/: tasks.md
openspec/changes/add-booking-constraints-and-admin-notifications/: design.md
openspec/changes/add-booking-lifecycle/: design.md  proposal.md  tasks.md
openspec/changes/add-client-booking-flow/: design.md  proposal.md  tasks.md
openspec/changes/add-reminder-notifications/: design.md  proposal.md  tasks.md
openspec/changes/add-slot-generation/: proposal.md  tasks.md
openspec/changes/add-specialist-admin-flow/: design.md  proposal.md  (+1 more)
tests/: conftest.py  test_admin_handlers.py  test_availability.py  test_availability_service.py  test_booking.py  test_booking_service.py  test_bot.py  test_client.py  test_client_handlers.py  test_client_service.py  test_config.py  test_formatting.py  test_handler.py  test_keyboards.py  test_migrations.py  test_naming.py  test_notify.py  test_reminder_service.py  test_slot_service.py  test_slots.py  test_specialist.py  test_specialist_service.py  test_ydb_client.py
(+64 files in other folders)
