[project]
name = "psy-slots"
version = "0.1.0"
description = "Telegram-бот бронирования слотов у психологов"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.29.1",
    "ydb>=3.30.0",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
fix = true
line-length = 79

[tool.pytest.ini_options]
asyncio_mode = "auto"
