[project]
name = "psy-slots"
version = "1.0.0"
description = "Telegram-бот бронирования слотов у психологов"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.29.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "ydb[yc]>=3.30.0",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
fix = true
line-length = 79

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.report]
fail_under = 80

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# У пакета ydb нет type-stubs (py.typed отсутствует).
module = ["ydb", "ydb.*"]
ignore_missing_imports = true
